<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.SingInFragment"
    android:background="@color/block"
    android:orientation="vertical">


    <androidx.appcompat.widget.AppCompatTextView
        style="@style/newPeninimFw400Fs32Lh32dot75"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_again"
        android:layout_marginTop="121dp"
        android:textAlignment="center"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:textColor="@color/subTextDark"
        android:layout_marginTop="8dp"
        style="@style/newPeninimFw400Fs16Lh24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fill_your_details_or_continue_with_social_media"
        android:textAlignment="center"
        android:layout_marginHorizontal="30dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/newPeninimFw400Fs16Lh20"
            android:layout_marginTop="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/LogInEmailEditText"
            android:layout_marginTop="12dp"
            style="@style/newPeninimFw400Fs14Lh16"
            android:hint="@string/xyz_gmail_com"
            android:textColorHint="@color/hint"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingRight="57dp"
            android:paddingLeft="14dp"
            android:background="@drawable/background_r15"/>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/newPeninimFw400Fs16Lh20"
            android:layout_marginTop="26dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"/>
        
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:background="@drawable/background_r15"
            android:paddingHorizontal="14dp"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/LogInPasswordEditText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/background"
                style="@style/newPeninimFw400Fs14Lh16"
                android:hint="@string/dots"
                android:textColorHint="@color/hint"
                android:inputType="textPassword"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox"
                android:layout_marginHorizontal="4dp"
                android:layout_width="16.36944007873535dp"
                android:layout_height="13dp"
                android:button="@drawable/eye_selector"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/recoveryPassword"
            style="@style/newPeninimFw400Fs12Lh16"
            android:textColor="@color/subTextDark"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recovery_password"/>
        
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/singInButton"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/background"
            android:layout_marginTop="24dp"
            style="@style/newPeninimFw400Fs14Lh22"
            android:background="@drawable/accent_r14"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
    
    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/createNewUser"
        android:text="@string/new_user_create_account"
        style="@style/newPeninimFw400Fs16Lh16dot38"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginHorizontal="20dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>