<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.fragments.HomeFragment"
    android:background="@color/background"
    android:id="@+id/homeFragment"
    android:paddingHorizontal="20dp"
    android:clipToPadding="false"
    android:clipChildren="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:clipChildren="false">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/hamburgerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/hamburger"
            android:layout_marginTop="62dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            style="@style/newPeninimFw400Fs32Lh32dot75"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explore"
            app:layout_constraintBottom_toBottomOf="@+id/hamburgerButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/hamburgerButton" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-13.71dp"
            android:layout_marginTop="-11dp"
            android:src="@drawable/highlight_05"
            app:layout_constraintStart_toStartOf="@+id/appCompatTextView"
            app:layout_constraintTop_toTopOf="@+id/appCompatTextView" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:background="@drawable/group_27"
            app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/appCompatTextView" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
            tools:layout_editor_absoluteX="20dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:background="@drawable/block_r14"
                android:elevation="4dp"
                android:gravity="center_vertical"
                android:paddingEnd="57dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:src="@drawable/icon" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/searchEditText"
                    style="@style/newPeninimFw400Fs12Lh20"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:background="@color/block"
                    android:hint="@string/search"
                    android:textColor="@color/text"
                    android:textColorHint="@color/hint" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/slidersButton"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginStart="14dp"
                android:background="@drawable/accent_circle"
                android:elevation="4dp"
                android:src="@drawable/sliders" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView2"
            style="@style/newPeninimFw400Fs16Lh16dot38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/select_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categoryRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="19dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2"
            tools:itemCount="4"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/fragment_category_item"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView3"
            style="@style/newPeninimFw400Fs16Lh24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/popular_shoes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryRecyclerView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/seeAllPopular"
            style="@style/newPeninimFw400Fs12Lh16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_all"
            android:textColor="@color/accent"
            app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/appCompatTextView3" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popularGoodsRecyclerView"
            android:layout_width="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_height="182dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView4"
            style="@style/newPeninimFw400Fs16Lh16dot38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:text="@string/new_arrivals"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popularGoodsRecyclerView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/seeAllArrivals"
            style="@style/newPeninimFw400Fs12Lh16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_all"
            android:textColor="@color/accent"
            app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/appCompatTextView4" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView4">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/arrivals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@drawable/frame_1000000849" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>